--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,14 @@ jobs:
             # name: Test dependencies are up to date
             #command: 'GOPATH="${GOPATH_HEAD}"; ( cd ${GOPATH_BASE}/${CIRCLE_PROJECT_REPONAME} && govend -u && git diff --quiet )'
 
+      - run:
+          name: ZAP baseline test of application
+          command: |
+            (
+            docker pull franbuehler/modsecurity-crs && \
+            docker run -p 80:80 -ti 
+            )
+          
       - deploy:
           # Push application container to dockerhub
           command: |
