--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           command: |
             (
             docker pull franbuehler/modsecurity-crs && \
-            docker run -p 80:80 -ti 
+            docker run -p 80:80 -ti franbuehler/modsecurity-crs
             )
           
       - deploy:
