--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,12 +55,13 @@ jobs:
             #command: 'GOPATH="${GOPATH_HEAD}"; ( cd ${GOPATH_BASE}/${CIRCLE_PROJECT_REPONAME} && govend -u && git diff --quiet )'
 
       - run:
-          name: ZAP baseline test of application
+          name: Run CRS Container
           command: |
             (
             docker pull franbuehler/modsecurity-crs && \
-            docker run -p 8000:8000 -ti franbuehler/modsecurity-crs
+            docker run franbuehler/modsecurity-crs
             )
+          background: true
           
       - deploy:
           # Push application container to dockerhub
